add reading for article/{id} and index.  need to fix MemberController for reading

--- a/src/main/resources/templates/members/new.mustache
+++ b/src/main/resources/templates/members/new.mustache
@@ -1,6 +1,6 @@
 {{>layouts/header}}
 
-<form class="container" action="/members/create" method="post">
+<form class="container" action="/join" method="post">
     <div class="mb=3">
         <label class="form-label">Email</label>
         <input type="text" class="form-control" name="email">
