--- a/src/main/resources/templates/article/show.mustache
+++ b/src/main/resources/templates/article/show.mustache
@@ -21,6 +21,7 @@
     </tbody>
 </table>
 
+<a href="/article/{{article.id}}/edit" class="btn btn-primary">Edit</a>
 <a href="/article">Go to Article List</a>
 
 {{>layouts/footer}}
