add delete and add index to link

--- a/src/main/resources/templates/article/show.mustache
+++ b/src/main/resources/templates/article/show.mustache
@@ -22,6 +22,7 @@
 </table>
 
 <a href="/article/{{article.id}}/edit" class="btn btn-primary">Edit</a>
+<a href="/article/{{article.id}}/delete" class="btn btn-danger">Delete</a>
 <a href="/article">Go to Article List</a>
 
 {{>layouts/footer}}
