--- a/src/main/resources/templates/article/index.mustache
+++ b/src/main/resources/templates/article/index.mustache
@@ -14,7 +14,7 @@
     {{#articleList}}
         <tr>
             <th>{{id}}</th>
-            <td>{{title}}</td>
+            <td><a href="/article/{{id}}">{{title}}</a></td>
             <td>{{content}}</td>
         </tr>
     {{/articleList}}
